# pfsp-solver

./: .gitignore  Cargo.toml  LICENSE  README.md
analysis/: .gitignore  README.md  requirements.txt
analysis/src/: algorithm-comparison.ipynb  convergence-plots.ipynb  parameters-tuning.ipynb
src/: main.rs
src/solver/: evaluator.rs  helpers.rs  mod.rs  population.rs  problem.rs  solution.rs
src/solver/algorithm/: annealing.rs  genetic.rs  greedy.rs  mod.rs  operators.rs  selectors.rs
src/tui/: controller.rs  gantt.rs  helpers.rs  mod.rs  state.rs  view.rs
src/tui/adapters/: adapter.rs  annealing.rs  genetic.rs  greedy.rs  helpers.rs  mod.rs  random.rs
src/tui/components/: input.rs  matrix.rs  mod.rs
src/tui/model/: event.rs  mod.rs  model.rs  screen.rs
