[package]
name = "pfsp-solver"
version = "0.1.0"
description = "Permutation Flowshop Scheduling Problem solver"
authors = ["it1shka <2tishbel@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
rand = "0.10.0"
ratatui = "0.30.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
